<resources>
    <string name="app_name">BusinessOnboardingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_here">New here?</string>
    <string name="create_account">Create account</string>
    <string name="or_login_with">or login with</string>
    <string name="email_address">Email Address</string>
    <string name="login">Login</string>
    <string name="farmereats">FarmerEats</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="submit">Submit</string>
    <string name="sendcode">Send Code</string>
    <string name="phonenumber">Phone Number</string>
    <string name="signup1of4">Signup 1 of 4</string>
    <string name="signup2of4">Signup 2 of 4</string>
    <string name="signup3of4">Signup 3 of 4</string>
    <string name="signupwith">or signup with</string>
    <string name="reset_password">Reset Password</string>
    <string name="farminfo">Farm Info</string>
    <string name="businessname">Business Name</string>
    <string name="informalname">Informal Name</string>
    <string name="streetaddress">Street Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="enterzipcode">Enter Zipcode</string>
    <string name="verification">Verification</string>
    <string name="desccontent">Attached proof of Department of Agriculture registrations i.e. Florida Fresh, USDA Approved, USDA Organic</string>
    <string name="attach_proof_of_registration">Attach proof of registration</string>


</resources>