<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white"
    tools:context=".ui.auth.LoginFragment">
    <TextView
        android:textColor="@color/black"
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farmereats"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:textColor="@color/black"
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset Password"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txtAppName"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:id="@+id/llsubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember your pasword?"
            android:textSize="16sp"
            android:paddingEnd="10dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:id="@+id/txtCreateaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:startIconDrawable="@drawable/ic_lock"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundMode="filled"
        app:boxBackgroundColor="@color/lightgrey"
        app:hintEnabled="true"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/llsubtitle"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editnewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/lightgrey"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundMode="filled"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editconfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:backgroundTint="@color/orange"
        app:cornerRadius="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:textStyle="bold"
        android:textColor="@color/orange"
        android:id="@+id/txtotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get OTP"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>