<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    android:background="@color/white"
    tools:context=".ui.auth.SignupFragment">
    <TextView
        android:textColor="@color/black"
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farmereats"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup3of4"
        android:textSize="16sp"
        android:paddingEnd="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/txtAppName"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:textColor="@color/black"
        android:id="@+id/txtVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtSubtitle"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desccontent"
        android:textSize="16sp"
        android:paddingEnd="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/txtSubtitle"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_attach"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/txtDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:id="@+id/txt_attach"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:text="@string/attach_proof_of_registration"
            android:layout_height="wrap_content"/>

        <ImageView
            android:background="@drawable/bg_circle_orange"
            android:padding="12dp"
            android:id="@+id/imgattach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_camera" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_filePreview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:background="@color/lightgrey"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/ll_attach"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtFileName"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="file.pdf"/>

        <ImageView
            android:id="@+id/imgRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll_continue"
        android:layout_marginTop="24dp"
        android:weightSum="3"
        app:layout_constraintTop_toBottomOf="@id/ll_filePreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_gravity="start"
            android:layout_weight="1"
            android:id="@+id/imgback"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btncontibue"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="Continue"
            android:textAllCaps="false"
            android:backgroundTint="@color/orange"
            app:cornerRadius="28dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>