<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white"
    tools:context=".ui.auth.LoginFragment">
    <TextView
        android:textColor="@color/black"
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farmereats"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:textColor="@color/black"
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome back!"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@id/txtAppName"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:id="@+id/llsubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome"
        app:layout_constraintStart_toStartOf="parent">
    <TextView
        android:id="@+id/txtSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_here"
        android:textSize="16sp"
        android:paddingEnd="10dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:id="@+id/txtCreateaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="16sp"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundMode="filled"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/gray"
        app:boxCornerRadiusTopStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/llsubtitle"
        android:layout_marginTop="40dp"
        app:boxBackgroundColor="@color/lightgrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:hint="@string/email_address"
            android:background="@color/lightgrey"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundMode="filled"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        app:startIconTint="@color/gray"
        android:layout_marginTop="16dp"
        app:boxBackgroundColor="@color/lightgrey"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        <TextView
            android:id="@+id/txtForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot?"
            android:textColor="@color/orange"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            app:layout_constraintEnd_toEndOf="@id/passwordLayout"/>
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:backgroundTint="@color/orange"
        app:cornerRadius="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
<LinearLayout
    app:layout_constraintTop_toBottomOf="@id/txtSignup"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="horizontal"
    android:layout_marginTop="50dp"
    android:gravity="center_horizontal"
    android:layout_width="0dp"
    android:weightSum="3"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_weight="1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="10dp"
        android:id="@+id/imglogingoogle"
        android:background="@drawable/ic_logobg"
        android:src="@drawable/ic_google"/>
    <ImageView
        android:layout_weight="1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="10dp"
        android:id="@+id/imgloginapple"
        android:background="@drawable/ic_logobg"
        android:src="@drawable/ic_apple"/>
    <ImageView
        android:layout_weight="1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="10dp"
        android:id="@+id/imgloginfb"
        android:background="@drawable/ic_logobg"
        android:src="@drawable/ic_facebook"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>