<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white"
    tools:context=".ui.auth.LoginFragment">
    <TextView
        android:textColor="@color/black"
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farmereats"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:textColor="@color/black"
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txtAppName"
        app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
        android:id="@+id/llsubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/txtWelcome"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/txtSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember your pasword?"
            android:textSize="16sp"
            android:paddingEnd="10dp"/>
        <TextView
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:id="@+id/txtCreateaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/otpLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter OTP"
        android:background="@color/lightgrey"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@id/llsubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="6"
            android:textColor="@color/black"
            android:letterSpacing="0.6"
            android:gravity="center"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/sendcode"
        android:textAllCaps="false"
        android:backgroundTint="@color/orange"
        app:cornerRadius="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/otpLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>